# wavemarks

./: License.txt  ReadMe.md  pyproject.toml
.github/workflows/: coverage_test_unit.yml
docs/: ChangeLog.md
src/tests/: unit.py
src/wavemarks/: __init__.py  __main__.py
src/wavemarks/_core/: exceptions.py  helpers.py
src/wavemarks/_core/models/: entry.py  note.py  region.py  tempo.py  type.py
src/wavemarks/_core/operations/: parse.py  serialize.py
src/wavemarks/_core/utils/: tempo.py
